--- a/ENV/Dockerfile
+++ b/ENV/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:9
 ENV trainer="shiva" \
     course="devops" \
-    duration="100hr" \
-    CMD [ "sleep" ]
+    duration="100hr" 
+CMD [ "sleep","100" ]
